# quickjs-jni

./: .gitignore  LICENSE.md  README.md  build.gradle  settings.gradle
src/main/java/com/quickjs/: JSContext.java  JSFunction.java  JSInternalError.java  JSModuleLoader.java  JSRangeError.java  JSReferenceError.java  JSRuntime.java  JSSyntaxError.java  JSTypeError.java  JSValue.java  QuickJS.java  QuickJSException.java
src/main/native/: CMakeLists.txt  quickjs_jni.c
src/test/java/com/quickjs/: JSBuilderTest.java  JSConvenienceTest.java  JSExceptionTest.java  JSFunctionTest.java  JSModuleTest.java  JSPromiseTest.java  JSRuntimeTest.java  JSSandboxTest.java  JSValueStrictTest.java  JSValueTest.java  QuickJSTest.java  TypeConversionTest.java
